# RECIPES-API

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  apiFood.c  apiFood.h  login_interface.c  login_interface.h  main.c  recipesApi  sonar-project.properties  splitString.c  splitString.h
